--- a/about.html
+++ b/about.html
@@ -211,13 +211,13 @@
 						</div>
 						<div class="b-gallery__container"> 
 							<div class="b-gallery__swiper swiper-initialized swiper-horizontal swiper-backface-hidden">
-								<div class="b-gallery__items swiper-wrapper" id="swiper-wrapper-57110eb4e9cd29918" aria-live="polite" style="transform: translate3d(0px, 0px, 0px);"><a class="b-gallery__item swiper-slide swiper-slide-active" data-fslightbox="gallery" href="http://localhost:3000/i/gallery-photo-1.jpg" style="width: 300px; margin-right: 20px;" role="group" aria-label="1 / 7">
-										<picture><img src="about_files/gallery-photo-1.jpg" loading="lazy"></picture></a><a class="b-gallery__item swiper-slide swiper-slide-next" data-fslightbox="gallery" href="http://localhost:3000/i/gallery-photo-2.jpg" style="width: 300px; margin-right: 20px;" role="group" aria-label="2 / 7">
-										<picture><img src="about_files/gallery-photo-2.jpg" loading="lazy"></picture></a><a class="b-gallery__item swiper-slide" data-fslightbox="gallery" href="http://localhost:3000/i/gallery-photo-3.jpg" style="width: 300px; margin-right: 20px;" role="group" aria-label="3 / 7">
-										<picture><img src="about_files/gallery-photo-3.jpg" loading="lazy"></picture></a><a class="b-gallery__item swiper-slide" data-fslightbox="gallery" href="http://localhost:3000/i/gallery-photo-4.jpg" style="width: 300px; margin-right: 20px;" role="group" aria-label="4 / 7">
-										<picture><img src="about_files/gallery-photo-4.jpg" loading="lazy"></picture></a><a class="b-gallery__item swiper-slide" data-fslightbox="gallery" href="http://localhost:3000/i/gallery-photo-3.jpg" style="width: 300px; margin-right: 20px;" role="group" aria-label="5 / 7">
-										<picture><img src="about_files/gallery-photo-3.jpg" loading="lazy"></picture></a><a class="b-gallery__item swiper-slide" data-fslightbox="gallery" href="http://localhost:3000/i/gallery-photo-2.jpg" style="width: 300px; margin-right: 20px;" role="group" aria-label="6 / 7">
-										<picture><img src="about_files/gallery-photo-2.jpg" loading="lazy"></picture></a><a class="b-gallery__item swiper-slide" data-fslightbox="gallery" href="http://localhost:3000/i/gallery-photo-1.jpg" style="width: 300px; margin-right: 20px;" role="group" aria-label="7 / 7">
+								<div class="b-gallery__items swiper-wrapper" id="swiper-wrapper-57110eb4e9cd29918" aria-live="polite" style="transform: translate3d(0px, 0px, 0px);"><a class="b-gallery__item swiper-slide swiper-slide-active" data-fslightbox="gallery" href="/i/gallery-photo-1.jpg" style="width: 300px; margin-right: 20px;" role="group" aria-label="1 / 7">
+										<picture><img src="about_files/gallery-photo-1.jpg" loading="lazy"></picture></a><a class="b-gallery__item swiper-slide swiper-slide-next" data-fslightbox="gallery" href="/i/gallery-photo-2.jpg" style="width: 300px; margin-right: 20px;" role="group" aria-label="2 / 7">
+										<picture><img src="about_files/gallery-photo-2.jpg" loading="lazy"></picture></a><a class="b-gallery__item swiper-slide" data-fslightbox="gallery" href="/i/gallery-photo-3.jpg" style="width: 300px; margin-right: 20px;" role="group" aria-label="3 / 7">
+										<picture><img src="about_files/gallery-photo-3.jpg" loading="lazy"></picture></a><a class="b-gallery__item swiper-slide" data-fslightbox="gallery" href="/i/gallery-photo-4.jpg" style="width: 300px; margin-right: 20px;" role="group" aria-label="4 / 7">
+										<picture><img src="about_files/gallery-photo-4.jpg" loading="lazy"></picture></a><a class="b-gallery__item swiper-slide" data-fslightbox="gallery" href="/i/gallery-photo-3.jpg" style="width: 300px; margin-right: 20px;" role="group" aria-label="5 / 7">
+										<picture><img src="about_files/gallery-photo-3.jpg" loading="lazy"></picture></a><a class="b-gallery__item swiper-slide" data-fslightbox="gallery" href="/i/gallery-photo-2.jpg" style="width: 300px; margin-right: 20px;" role="group" aria-label="6 / 7">
+										<picture><img src="about_files/gallery-photo-2.jpg" loading="lazy"></picture></a><a class="b-gallery__item swiper-slide" data-fslightbox="gallery" href="/i/gallery-photo-1.jpg" style="width: 300px; margin-right: 20px;" role="group" aria-label="7 / 7">
 										<picture><img src="about_files/gallery-photo-1.jpg" loading="lazy"></picture></a></div>
 							<span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
 							<div class="b-gallery__swiper-buttons">
@@ -588,7 +588,7 @@
 															<div class="popup-form__private">
 																<div class="form__checkbox form__checkbox_dark">
 																	<input class="form__checkbox-input _cb-req" type="checkbox" name="private" id="private-popup-3" checked="checked">
-																	<label class="form__checkbox-label fs-12" for="private-popup-3">Я принимаю <a href="http://localhost:3000/about/terms.html">Соглашение о конфиденциальности личной информации</a> , даю согласие на обработку персональных данных и соглашаюсь с политикой конфиденциальности.</label>
+																	<label class="form__checkbox-label fs-12" for="private-popup-3">Я принимаю <a href="/about/terms.html">Соглашение о конфиденциальности личной информации</a> , даю согласие на обработку персональных данных и соглашаюсь с политикой конфиденциальности.</label>
 																	<div class="form__error i-err">Ошибка</div>
 																</div>
 															</div>
