--- a/contacts.html
+++ b/contacts.html
@@ -749,7 +749,7 @@
 															<div class="popup-form__private">
 																<div class="form__checkbox form__checkbox_dark">
 																	<input class="form__checkbox-input _cb-req" type="checkbox" name="private" id="private-popup-3" checked="checked">
-																	<label class="form__checkbox-label fs-12" for="private-popup-3">Я принимаю <a href="http://localhost:3000/contacts/terms.html">Соглашение о конфиденциальности личной информации</a> , даю согласие на обработку персональных данных и соглашаюсь с политикой конфиденциальности.</label>
+																	<label class="form__checkbox-label fs-12" for="private-popup-3">Я принимаю <a href="terms.html">Соглашение о конфиденциальности личной информации</a> , даю согласие на обработку персональных данных и соглашаюсь с политикой конфиденциальности.</label>
 																	<div class="form__error i-err">Ошибка</div>
 																</div>
 															</div>
