--- a/feedback.html
+++ b/feedback.html
@@ -208,7 +208,7 @@
 										</div>
 									</div>
 									<div class="b-feedback-grid__info">
-										<div class="b-feedback-grid__date">Отзыв от <span>29.12.2020</span></div><a class="b-feedback-grid__original" href="http://localhost:3000/i/b-feedback-1.jpg" data-fslightbox="b-feedback">
+										<div class="b-feedback-grid__date">Отзыв от <span>29.12.2020</span></div><a class="b-feedback-grid__original" href="/i/b-feedback-1.jpg" data-fslightbox="b-feedback">
 											<picture><img src="feedback_files/b-feedback-1.jpg" loading="lazy"></picture></a>
 									</div>
 									<div class="b-feedback-grid__answer">
@@ -247,7 +247,7 @@
 										</div>
 									</div>
 									<div class="b-feedback-grid__info">
-										<div class="b-feedback-grid__date">Отзыв от <span>29.12.2020</span></div><a class="b-feedback-grid__original" href="http://localhost:3000/i/b-feedback-1.jpg" data-fslightbox="b-feedback">
+										<div class="b-feedback-grid__date">Отзыв от <span>29.12.2020</span></div><a class="b-feedback-grid__original" href="/i/b-feedback-1.jpg" data-fslightbox="b-feedback">
 											<picture><img src="feedback_files/b-feedback-1.jpg" loading="lazy"></picture></a>
 									</div>
 									<div class="b-feedback-grid__answer">
@@ -293,7 +293,7 @@
 								</div>
 							</li>
 							<li class="b-feedback-grid__info">
-								<div class="b-feedback-grid__date">Отзыв от <span>29.12.2020</span></div><a class="b-feedback-grid__original" href="http://localhost:3000/i/b-feedback-1.jpg" data-fslightbox="b-feedback">
+								<div class="b-feedback-grid__date">Отзыв от <span>29.12.2020</span></div><a class="b-feedback-grid__original" href="/i/b-feedback-1.jpg" data-fslightbox="b-feedback">
 									<picture><img src="feedback_files/b-feedback-1.jpg" loading="lazy"></picture></a>
 							</li>
 						</ul>
@@ -608,7 +608,7 @@
 															<div class="popup-form__private">
 																<div class="form__checkbox form__checkbox_dark">
 																	<input class="form__checkbox-input _cb-req" type="checkbox" name="private" id="private-popup-3" checked="checked">
-																	<label class="form__checkbox-label fs-12" for="private-popup-3">Я принимаю <a href="http://localhost:3000/feedback/terms.html">Соглашение о конфиденциальности личной информации</a> , даю согласие на обработку персональных данных и соглашаюсь с политикой конфиденциальности.</label>
+																	<label class="form__checkbox-label fs-12" for="private-popup-3">Я принимаю <a href="/feedback/terms.html">Соглашение о конфиденциальности личной информации</a> , даю согласие на обработку персональных данных и соглашаюсь с политикой конфиденциальности.</label>
 																	<div class="form__error i-err">Ошибка</div>
 																</div>
 															</div>
