--- a/judicial.html
+++ b/judicial.html
@@ -227,15 +227,15 @@
 						<div class="b-licenses__title">
 							<h2>Лицензии</h2>
 						</div>
-						<div class="b-licenses__items"><a class="b-licenses__item" href="http://localhost:3000/i/b-licenses.jpg" data-fslightbox="b-licenses">
-								<picture><img src="judicial_files/b-licenses.jpg" loading="lazy"></picture></a><a class="b-licenses__item" href="http://localhost:3000/i/b-licenses.jpg" data-fslightbox="b-licenses">
-								<picture><img src="judicial_files/b-licenses.jpg" loading="lazy"></picture></a><a class="b-licenses__item" href="http://localhost:3000/i/b-licenses.jpg" data-fslightbox="b-licenses">
-								<picture><img src="judicial_files/b-licenses.jpg" loading="lazy"></picture></a><a class="b-licenses__item" href="http://localhost:3000/i/b-licenses.jpg" data-fslightbox="b-licenses">
-								<picture><img src="judicial_files/b-licenses.jpg" loading="lazy"></picture></a><a class="b-licenses__item" href="http://localhost:3000/i/b-licenses.jpg" data-fslightbox="b-licenses">
-								<picture><img src="judicial_files/b-licenses.jpg" loading="lazy"></picture></a><a class="b-licenses__item" href="http://localhost:3000/i/b-licenses.jpg" data-fslightbox="b-licenses">
-								<picture><img src="judicial_files/b-licenses.jpg" loading="lazy"></picture></a><a class="b-licenses__item" href="http://localhost:3000/i/b-licenses.jpg" data-fslightbox="b-licenses">
-								<picture><img src="judicial_files/b-licenses.jpg" loading="lazy"></picture></a><a class="b-licenses__item" href="http://localhost:3000/i/b-licenses.jpg" data-fslightbox="b-licenses">
-								<picture><img src="judicial_files/b-licenses.jpg" loading="lazy"></picture></a><a class="b-licenses__item" href="http://localhost:3000/i/b-licenses.jpg" data-fslightbox="b-licenses">
+						<div class="b-licenses__items"><a class="b-licenses__item" href="/i/b-licenses.jpg" data-fslightbox="b-licenses">
+								<picture><img src="judicial_files/b-licenses.jpg" loading="lazy"></picture></a><a class="b-licenses__item" href="/i/b-licenses.jpg" data-fslightbox="b-licenses">
+								<picture><img src="judicial_files/b-licenses.jpg" loading="lazy"></picture></a><a class="b-licenses__item" href="/i/b-licenses.jpg" data-fslightbox="b-licenses">
+								<picture><img src="judicial_files/b-licenses.jpg" loading="lazy"></picture></a><a class="b-licenses__item" href="/i/b-licenses.jpg" data-fslightbox="b-licenses">
+								<picture><img src="judicial_files/b-licenses.jpg" loading="lazy"></picture></a><a class="b-licenses__item" href="/i/b-licenses.jpg" data-fslightbox="b-licenses">
+								<picture><img src="judicial_files/b-licenses.jpg" loading="lazy"></picture></a><a class="b-licenses__item" href="/i/b-licenses.jpg" data-fslightbox="b-licenses">
+								<picture><img src="judicial_files/b-licenses.jpg" loading="lazy"></picture></a><a class="b-licenses__item" href="/i/b-licenses.jpg" data-fslightbox="b-licenses">
+								<picture><img src="judicial_files/b-licenses.jpg" loading="lazy"></picture></a><a class="b-licenses__item" href="/i/b-licenses.jpg" data-fslightbox="b-licenses">
+								<picture><img src="judicial_files/b-licenses.jpg" loading="lazy"></picture></a><a class="b-licenses__item" href="/i/b-licenses.jpg" data-fslightbox="b-licenses">
 								<picture><img src="judicial_files/b-licenses.jpg" loading="lazy"></picture></a></div>
 						<button class="b-licenses__show-more" type="button">Показать еще</button>
 					</div>
@@ -730,7 +730,7 @@ Cookie-файлы Google Analytics могут использоваться в н
 															<div class="popup-form__private">
 																<div class="form__checkbox form__checkbox_dark">
 																	<input class="form__checkbox-input _cb-req" type="checkbox" name="private" id="private-popup-3" checked="checked">
-																	<label class="form__checkbox-label fs-12" for="private-popup-3">Я принимаю <a href="http://localhost:3000/judicial/terms.html">Соглашение о конфиденциальности личной информации</a> , даю согласие на обработку персональных данных и соглашаюсь с политикой конфиденциальности.</label>
+																	<label class="form__checkbox-label fs-12" for="private-popup-3">Я принимаю <a href="/judicial/terms.html">Соглашение о конфиденциальности личной информации</a> , даю согласие на обработку персональных данных и соглашаюсь с политикой конфиденциальности.</label>
 																	<div class="form__error i-err">Ошибка</div>
 																</div>
 															</div>
