--- a/index.html
+++ b/index.html
@@ -183,22 +183,22 @@
 						</div>
 						<div class="b-breed-2__container text">
 							<ul>
-								<li> <a href="http://localhost:3000/index%20%E2%80%94%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F/about.html">О компании</a></li>
-								<li> <a href="http://localhost:3000/index%20%E2%80%94%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F/description.html">Описание услуги</a></li>
-								<li> <a href="http://localhost:3000/index%20%E2%80%94%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F/doctor.html">О враче</a></li>
-								<li> <a href="http://localhost:3000/index%20%E2%80%94%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F/doctors.html">Врачи</a></li>
-								<li> <a href="http://localhost:3000/index%20%E2%80%94%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F/faq.html">Ответы на вопросы</a></li>
-								<li> <a href="http://localhost:3000/index%20%E2%80%94%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F/feedback.html">Отзывы</a></li>
-								<li> <a href="http://localhost:3000/index%20%E2%80%94%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F/judicial.html">Правовая информация</a></li>
-								<li> <a href="http://localhost:3000/index%20%E2%80%94%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F/prices.html">Цены</a></li>
-								<li> <a href="http://localhost:3000/index%20%E2%80%94%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F/publication.html">Публикация</a></li>
-								<li> <a href="http://localhost:3000/index%20%E2%80%94%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F/publications.html">Публикации разводящая</a></li>
-								<li> <a href="http://localhost:3000/index%20%E2%80%94%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F/search.html">Страница поиска</a></li>
-								<li> <a href="http://localhost:3000/index%20%E2%80%94%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F/services.html">Услуги</a></li>
-								<li> <a href="http://localhost:3000/index%20%E2%80%94%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F/autopark.html">Автопарк</a></li>
-								<li> <a href="http://localhost:3000/index%20%E2%80%94%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F/contacts.html">Контакты</a></li>
-								<li> <a href="http://localhost:3000/index%20%E2%80%94%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F/corporations.html">Для юридических лиц</a></li>
-								<li> <a href="http://localhost:3000/index%20%E2%80%94%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F/404-not-found.html">Страница ошибка 404</a></li>
+								<li> <a href="about.html">О компании</a></li>
+								<li> <a href="description.html">Описание услуги</a></li>
+								<li> <a href="doctor.html">О враче</a></li>
+								<li> <a href="doctors.html">Врачи</a></li>
+								<li> <a href="faq.html">Ответы на вопросы</a></li>
+								<li> <a href="feedback.html">Отзывы</a></li>
+								<li> <a href="judicial.html">Правовая информация</a></li>
+								<li> <a href="prices.html">Цены</a></li>
+								<li> <a href="publication.html">Публикация</a></li>
+								<li> <a href="publications.html">Публикации разводящая</a></li>
+								<li> <a href="search.html">Страница поиска</a></li>
+								<li> <a href="services.html">Услуги</a></li>
+								<li> <a href="autopark.html">Автопарк</a></li>
+								<li> <a href="contacts.html">Контакты</a></li>
+								<li> <a href="corporations.html">Для юридических лиц</a></li>
+								<li> <a href="404-not-found.html">Страница ошибка 404</a></li>
 							</ul>
 						</div>
 					</div>
@@ -522,13 +522,13 @@
 						</div>
 						<div class="b-gallery__container"> 
 							<div class="b-gallery__swiper swiper-initialized swiper-horizontal swiper-backface-hidden">
-								<div class="b-gallery__items swiper-wrapper" id="swiper-wrapper-910b462e8abe89910e" aria-live="polite" style="transform: translate3d(0px, 0px, 0px);"><a class="b-gallery__item swiper-slide swiper-slide-active" data-fslightbox="gallery" href="http://localhost:3000/i/gallery-photo-1.jpg" style="width: 386.667px; margin-right: 35px;" role="group" aria-label="1 / 7">
-										<picture><img src="index_files/gallery-photo-1.jpg" loading="lazy"></picture></a><a class="b-gallery__item swiper-slide swiper-slide-next" data-fslightbox="gallery" href="http://localhost:3000/i/gallery-photo-2.jpg" style="width: 386.667px; margin-right: 35px;" role="group" aria-label="2 / 7">
-										<picture><img src="index_files/gallery-photo-2.jpg" loading="lazy"></picture></a><a class="b-gallery__item swiper-slide" data-fslightbox="gallery" href="http://localhost:3000/i/gallery-photo-3.jpg" style="width: 386.667px; margin-right: 35px;" role="group" aria-label="3 / 7">
-										<picture><img src="index_files/gallery-photo-3.jpg" loading="lazy"></picture></a><a class="b-gallery__item swiper-slide" data-fslightbox="gallery" href="http://localhost:3000/i/gallery-photo-4.jpg" style="width: 386.667px; margin-right: 35px;" role="group" aria-label="4 / 7">
-										<picture><img src="index_files/gallery-photo-4.jpg" loading="lazy"></picture></a><a class="b-gallery__item swiper-slide" data-fslightbox="gallery" href="http://localhost:3000/i/gallery-photo-3.jpg" style="width: 386.667px; margin-right: 35px;" role="group" aria-label="5 / 7">
-										<picture><img src="index_files/gallery-photo-3.jpg" loading="lazy"></picture></a><a class="b-gallery__item swiper-slide" data-fslightbox="gallery" href="http://localhost:3000/i/gallery-photo-2.jpg" style="width: 386.667px; margin-right: 35px;" role="group" aria-label="6 / 7">
-										<picture><img src="index_files/gallery-photo-2.jpg" loading="lazy"></picture></a><a class="b-gallery__item swiper-slide" data-fslightbox="gallery" href="http://localhost:3000/i/gallery-photo-1.jpg" style="width: 386.667px; margin-right: 35px;" role="group" aria-label="7 / 7">
+								<div class="b-gallery__items swiper-wrapper" id="swiper-wrapper-910b462e8abe89910e" aria-live="polite" style="transform: translate3d(0px, 0px, 0px);"><a class="b-gallery__item swiper-slide swiper-slide-active" data-fslightbox="gallery" href="/i/gallery-photo-1.jpg" style="width: 386.667px; margin-right: 35px;" role="group" aria-label="1 / 7">
+										<picture><img src="index_files/gallery-photo-1.jpg" loading="lazy"></picture></a><a class="b-gallery__item swiper-slide swiper-slide-next" data-fslightbox="gallery" href="/i/gallery-photo-2.jpg" style="width: 386.667px; margin-right: 35px;" role="group" aria-label="2 / 7">
+										<picture><img src="index_files/gallery-photo-2.jpg" loading="lazy"></picture></a><a class="b-gallery__item swiper-slide" data-fslightbox="gallery" href="/i/gallery-photo-3.jpg" style="width: 386.667px; margin-right: 35px;" role="group" aria-label="3 / 7">
+										<picture><img src="index_files/gallery-photo-3.jpg" loading="lazy"></picture></a><a class="b-gallery__item swiper-slide" data-fslightbox="gallery" href="/i/gallery-photo-4.jpg" style="width: 386.667px; margin-right: 35px;" role="group" aria-label="4 / 7">
+										<picture><img src="index_files/gallery-photo-4.jpg" loading="lazy"></picture></a><a class="b-gallery__item swiper-slide" data-fslightbox="gallery" href="/i/gallery-photo-3.jpg" style="width: 386.667px; margin-right: 35px;" role="group" aria-label="5 / 7">
+										<picture><img src="index_files/gallery-photo-3.jpg" loading="lazy"></picture></a><a class="b-gallery__item swiper-slide" data-fslightbox="gallery" href="/i/gallery-photo-2.jpg" style="width: 386.667px; margin-right: 35px;" role="group" aria-label="6 / 7">
+										<picture><img src="index_files/gallery-photo-2.jpg" loading="lazy"></picture></a><a class="b-gallery__item swiper-slide" data-fslightbox="gallery" href="/i/gallery-photo-1.jpg" style="width: 386.667px; margin-right: 35px;" role="group" aria-label="7 / 7">
 										<picture><img src="index_files/gallery-photo-1.jpg" loading="lazy"></picture></a></div>
 							<span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
 							<div class="b-gallery__swiper-buttons">
@@ -1053,7 +1053,7 @@
 															<div class="popup-form__private">
 																<div class="form__checkbox form__checkbox_dark">
 																	<input class="form__checkbox-input _cb-req" type="checkbox" name="private" id="private-popup-3" checked="checked">
-																	<label class="form__checkbox-label fs-12" for="private-popup-3">Я принимаю <a href="http://localhost:3000/index%20%E2%80%94%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F/terms.html">Соглашение о конфиденциальности личной информации</a> , даю согласие на обработку персональных данных и соглашаюсь с политикой конфиденциальности.</label>
+																	<label class="form__checkbox-label fs-12" for="private-popup-3">Я принимаю <a href="terms.html">Соглашение о конфиденциальности личной информации</a> , даю согласие на обработку персональных данных и соглашаюсь с политикой конфиденциальности.</label>
 																	<div class="form__error i-err">Ошибка</div>
 																</div>
 															</div>
